--- a/app/src/main/res/layout/list_item_pengumuman_2.xml
+++ b/app/src/main/res/layout/list_item_pengumuman_2.xml
@@ -21,7 +21,7 @@
             android:id="@+id/image_right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/gambar_pengumuman"
+            android:src="@drawable/gambar_kucing_pusing"
             android:scaleType="centerCrop"
             android:contentDescription="Gambar postingan"
             android:background="@android:color/transparent" />
@@ -46,7 +46,7 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pengumuman"
+                android:text="Kerja"
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/is_m" />
@@ -55,7 +55,7 @@
                 android:id="@+id/tvSub"
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
-                android:text="ocean: kisi-kisi struktur data dah kebany..."
+                android:text="Rafi mengubah nama grup menjadi Kerja"
                 android:textSize="14sp"
                 android:textColor="#A3A3A3"
                 android:fontFamily="@font/is_m" />
@@ -65,7 +65,7 @@
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="22.00"
+            android:text="20.00"
             android:textSize="10sp"
             android:textColor="#FFFFFF"
             android:fontFamily="@font/is_r"
@@ -77,7 +77,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/custom_button_biru_bulat"
-            android:text="1"
+            android:text="3"
             android:layout_marginTop="30dp"
             android:textColor="@android:color/white"
             android:textSize="12sp"
