--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="third_color">#3F5FCE</color>
     <color name="btn_fabmenu">#3B5CCC</color>
     <color name="item_tagar">#10ffffff</color>
+    <color name="blue_37B">#3A7BFF</color>
+    <color name="white_80">#80FFFFFF</color>
+    <color name="bg_ungu_tipis">#121A2C</color>
 </resources>
