--- a/app/src/main/res/layout/badge_besar.xml
+++ b/app/src/main/res/layout/badge_besar.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#0A1124"
     tools:context=".Home.HomeFragment">
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +40,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Seminar"
+                android:text="Konser"
                 android:fontFamily="@font/is_r"
                 android:textSize="8sp"
                 android:textColor="@color/white" />
