--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -10,26 +10,30 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="357dp"
         android:layout_height="116dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/asset_background_list_item"
-        android:clipToOutline="true">
+        android:clipToOutline="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/img_poster"
             android:layout_width="80dp"
             android:layout_height="96dp"
-            android:background="@drawable/rounded_image_event_list"
+            android:layout_marginLeft="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardUseCompatPadding="false"
+            app:cardElevation="0dp"
+            android:clipToOutline="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:clipToOutline="true"
-            android:layout_marginLeft="10dp">
+            app:layout_constraintStart_toStartOf="parent">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/tryposter"/>
-        </LinearLayout>
+                android:scaleType="centerCrop"
+                android:src="@drawable/tryposter" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/text_container"
@@ -51,7 +55,7 @@
                 android:textColor="#5E8BFF"
                 android:textSize="12sp"
                 android:fontFamily="@font/is_r"
-                android:layout_marginVertical="8dp"/>
+                android:layout_marginVertical="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -62,32 +66,33 @@
                 android:fontFamily="@font/is_sb"
                 android:maxLines="2"
                 android:ellipsize="end"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="8dp"
                     android:layout_height="18dp"
-                    android:src="@drawable/icon_lokasi_abu"
-                    android:layout_marginRight="4dp"/>
+                    android:layout_marginRight="4dp"
+                    android:src="@drawable/icon_lokasi_abu" />
+
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="Gor Djoeang 45 Politeknik Negeri Jember"
                     android:textColor="#7FFFFFFF"
                     android:textSize="12sp"
                     android:fontFamily="@font/is_r"
                     android:maxLines="2"
-                    android:ellipsize="end"/>
+                    android:ellipsize="end" />
             </LinearLayout>
 
         </LinearLayout>
 
-        <!-- Badge pojok tetap -->
         <FrameLayout
             android:id="@+id/badge_container"
             android:layout_width="70dp"
@@ -99,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/badge_end"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/badge_status"
@@ -108,10 +113,10 @@
                 android:layout_gravity="top|end"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
-                android:fontFamily="@font/is_sb"
                 android:text="Hampir\nBerakhir"
                 android:textColor="@color/white"
-                android:textSize="8sp" />
+                android:textSize="8sp"
+                android:fontFamily="@font/is_sb" />
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
