--- a/app/src/main/res/layout/fragment_event_utama.xml
+++ b/app/src/main/res/layout/fragment_event_utama.xml
@@ -1,133 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="#0A1124"
+    android:fillViewport="true"
     tools:context=".Home.HomeFragment">
-    <TextView
-        android:id="@+id/text_event_mendatang"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="Event Mendatang"
-        android:textColor="@color/white"
-        android:fontFamily="@font/is_sb"
-        android:textSize="16sp"
-        android:layout_marginHorizontal="18dp"
-        />
-    <HorizontalScrollView
-        android:id="@+id/scroll_horizontal_event_mendatang"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@id/text_event_mendatang"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="18dp"
-        android:padding="5dp"
-        android:orientation="horizontal"
-        android:scrollbars="none"
-        android:layout_marginTop="17dp">
-        <LinearLayout
-            android:id="@+id/container_event"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp">
-                <include layout="@layout/fragment_event_mendatang"/>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp">
-                <include layout="@layout/fragment_event_mendatang"/>
-            </LinearLayout>
-        </LinearLayout>
-    </HorizontalScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_sedang_trend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/scroll_horizontal_event_mendatang"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Sedang Trending"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:fontFamily="@font/is_sb"
-        android:layout_marginTop="17dp"
-        android:layout_marginHorizontal="18dp"
-        />
-    
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_sedang_trend"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="17dp">
-        <LinearLayout
+        <TextView
+            android:id="@+id/text_event_mendatang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:text="Event Mendatang"
+            android:textColor="@color/white"
+            android:fontFamily="@font/is_sb"
+            android:textSize="16sp"
+            android:layout_marginHorizontal="18dp"
+            android:layout_marginTop="18dp"/>
+
+        <HorizontalScrollView
+            android:id="@+id/scroll_horizontal_event_mendatang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            android:layout_marginHorizontal="18dp"
+            android:padding="5dp"
+            android:layout_marginTop="10dp">
+
             <LinearLayout
+                android:id="@+id/container_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/item1EventMendatang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp">
+                    <include layout="@layout/fragment_event_mendatang"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/item2EventMendatang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp">
+                    <include layout="@layout/fragment_event_mendatang"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <TextView
+            android:id="@+id/text_sedang_trend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sedang Trending"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:fontFamily="@font/is_sb"
+            android:layout_marginTop="17dp"
+            android:layout_marginHorizontal="18dp"/>
+
+        <LinearLayout
+            android:id="@+id/trending_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="18dp"
+            android:paddingTop="10dp">
+
+            <LinearLayout
+                android:id="@+id/trending_item_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
                 <include layout="@layout/fragment_event_list"/>
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/trending_item_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
                 <include layout="@layout/fragment_event_list"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
                 <include layout="@layout/fragment_event_list"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
                 <include layout="@layout/fragment_event_list"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
                 <include layout="@layout/fragment_event_list"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
                 <include layout="@layout/fragment_event_list"/>
             </LinearLayout>
+
         </LinearLayout>
 
-    </ScrollView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</ScrollView>
